Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11931

enhance ExecutorBlacklist::IsBlacklisted to avoid null pointer exception

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Trivial
    • Resolution: Fixed
    • None
    • Impala 4.3.0
    • None
    • None
    • ghx-label-1

    Description

      'ExecutorBlacklist::IsBlacklisted(const BackendDescriptorPB& be_desc, Status* cause = nullptr, int64_t*time_remaining_ms = nullptr)' will crash if the 3rd parameter 'time_remaining_ms' is nullptr, see: https://github.com/apache/impala/blob/4.2.0/be/src/scheduling/executor-blacklist.cc#L143

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            yx91490 XiangYang
            yx91490 XiangYang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment