IMPALA-11931: enhance ExecutorBlacklist::IsBlacklisted to avoid null pointer exception

Testing:
 - add BE test 'ClusterMembershipMgrTest.IsBlacklisted'.

Change-Id: Ib35f5ee1f4c54b2acd62e737ca250f8814e87450
Reviewed-on: http://gerrit.cloudera.org:8080/19527
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>